BUG Resolved: The popup is displayed partially, it should be at the center so that the entire image is visible.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,5 +8,5 @@
 .leaflet-container a.leaflet-popup-close-button
     padding: 1px 0.25px 0 0
     color: black
-.leaflet-popup-content
-    width: 500px !important
+// .leaflet-popup-content
+//     width: 500px !important
